# operating-systems-2026-2

practicas/practica1/src/: CMakeLists.txt  main.c
practices/: .gitignore
practices/practice1/: .gitignore  .gitignore~
practices/practice1/reporte/: portada.tex  reporte.tex
practices/practice1/src/: main.c
practices/practice2/: .gitignore
practices/practice2/report/: cover.tex  practice.tex
practices/practice2/src/: CMakeLists.txt  kernel_drivers.c  kernel_service.c  main.c  user_app.c
practices/practice3/report/: cover.tex  practice.tex
practices/practice3/src/: CMakeLists.txt  kernel_drivers.c  main.c  pendsv.s  user_app.c
practices/practice4/report/: cover.tex  practice.aux  practice.tex
practices/practice4/src/: CMakeLists.txt  main.c  pendsv.s  scheduler.c  scheduler.h  user_app.c
practices/practice5/report/: cover.tex  practice.tex
practices/practice5/src/: CMakeLists.txt  main.c  scheduler.c  scheduler.h  user_app.c
practices/practice6/report/: cover.tex  practice.tex
practices/practice6/src/: main.c  mmu.c  paging_basic.c  (+3 more)
tareas/checkroot_mod/: .gitignore  README.md  checkrootmod.c
tasks/checkroot_mod/: Makefile
tasks/deadlocks/: deadlocks.tex  portada.tex
tasks/ej_ayud2/: .gitignore  portada.tex  tarea2.tex
tasks/ej_ayud3/: .gitignore  portada.tex  tarea3.aux  tarea3.tex  tarea3.tex~
tasks/guaranteed_scheduling/: guaranteed.c
tasks/mnt-vs-prefix/: portada.tex
tasks/processes_scheduling/: .gitignore  README.md  processes_scheduling.c  scheduler.c  scheduler.h
tasks/seguridad/: .gitignore  README.md  cfi.cpp  uaf.cpp
(+20 files in other folders)
